# dashboard

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  package-lock.json  package.json
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/css/: index.css  tailwinds.css
frontend/src/assets/js/: utils.js
frontend/src/components/: Classes.vue  Customizer.vue  Dashboard.vue  Home.vue  IPLogs.vue  Sidebar.vue  SidebarDropdown.vue  SidebarLinkTag.vue  Todo.vue
frontend/src/components/misc/: DownloadBox.vue  DownloadData.vue
frontend/src/router/: index.js
frontend/src/views/: Customize.vue
server/: index.ts  package.json
src/: App.vue  main.rs
src/assets/css/: index.css  tailwinds.css
src/assets/js/: utils.js
src/assets/scss/: index.scss  tailwinds.scss
src/components/: Classes.vue  Dashboard.vue  Sidebar.vue  Todo.vue  TodoBox.vue
src/components/charts/: NewChart.vue
