[package]
name = "LearnRust"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.24.5"
public-ip = "0.2"
